# rsssync

./: Cargo.toml  rustfmt.toml
src/: main.rs
